--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: homework9_2
-description: A new Flutter project.
+name: flutter_user_profile
+description: Flutter project implementing user registration, editing and viewing profile. With adaptive layout and using objectbox database to store user data. Custom space theme.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
