--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,15 @@ dependencies:
   intl: any
   image_picker: ^0.8.7+5
   localization: ^2.1.0
+  objectbox: ^2.0.0
+  objectbox_flutter_libs: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+  objectbox_generator: any
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
